--- a/choice_data.Rmd
+++ b/choice_data.Rmd
@@ -65,7 +65,7 @@ data_meanse <- function(x) {
 # load data
 ```{r}
 # setwd("E:/Ruonan/Projects in the lab/mdm_covid19/batch_data")
-setwd("/Users/jiaruonan/Desktop/mdm_covid19/mdm_covid19_data")
+setwd("E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data")
 load("data_all_444sub_rename.Rda")
 load("data_all_444sub_rename_header.Rda")
 load("data_all_444sub_attitude.Rda")
@@ -339,8 +339,8 @@ save(data.choice.med, file="data_choice_med_444sub.Rda")
 # Choice data
 
 ```{r}
-setwd("/Users/jiaruonan/Desktop/mdm_covid19/mdm_covid19_data")
-path = "/Users/jiaruonan/Desktop/mdm_covid19/mdm_covid19_data"
+setwd("E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data")
+path = "E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data"
 load("data_choice_mon_444sub.Rda")
 load("data_choice_med_444sub.Rda")
 
@@ -446,8 +446,10 @@ ggplot(data_plot, aes(x=val, y=choice)) +
 ids <- data.task$mTurkCode
 
 risk.mon <- rep(0,length(ids))
+ambig.mon <- rep(0,length(ids))
 ambig_corr.mon <- rep(0,length(ids))
 risk.med <- rep(0,length(ids))
+ambig.med <- rep(0,length(ids))
 ambig_corr.med <- rep(0,length(ids))
 
 error.mon <- rep(0,length(ids))
@@ -467,6 +469,10 @@ ambig24.mon <- rep(0,length(ids))
 ambig50.mon <- rep(0,length(ids))
 ambig74.mon <- rep(0,length(ids))
 ambig100.mon <- rep(0,length(ids))
+ambig24_corr.mon <- rep(0,length(ids))
+ambig50_corr.mon <- rep(0,length(ids))
+ambig74_corr.mon <- rep(0,length(ids))
+ambig100_corr.mon <- rep(0,length(ids))
 
 risk25.med <- rep(0,length(ids))
 risk50.med <- rep(0,length(ids))
@@ -475,6 +481,10 @@ ambig24.med <- rep(0,length(ids))
 ambig50.med <- rep(0,length(ids))
 ambig74.med <- rep(0,length(ids))
 ambig100.med <- rep(0,length(ids))
+ambig24_corr.med <- rep(0,length(ids))
+ambig50_corr.med <- rep(0,length(ids))
+ambig74_corr.med <- rep(0,length(ids))
+ambig100_corr.med <- rep(0,length(ids))
 
 level1.risk.mon <- rep(0,length(ids))
 level2.risk.mon <- rep(0,length(ids))
@@ -525,22 +535,32 @@ for (id in ids) {
   risk50.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0 & sub.med$prob==0.5])
   risk75.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0 & sub.med$prob==0.75])
 
-  ambig24.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.24]) -
+  ambig24.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.24])
+  ambig50.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.50]) 
+  ambig74.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.75])
+  ambig100.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==1])
+  
+  ambig24_corr.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.24]) -
     mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0 & sub.mon$prob==0.5])
-  ambig50.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.50]) -
+  ambig50_corr.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.50]) -
     mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0 & sub.mon$prob==0.5])
-  ambig74.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.75]) -
+  ambig74_corr.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0.75]) -
     mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0 & sub.mon$prob==0.5])
-  ambig100.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==1]) -
+  ambig100_corr.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==1]) -
     mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0 & sub.mon$prob==0.5])
 
-  ambig24.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.24]) -
+  ambig24.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.24])
+  ambig50.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.50])
+  ambig74.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.75]) 
+  ambig100.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==1]) 
+  
+  ambig24_corr.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.24]) -
     mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0 & sub.med$prob==0.5])
-  ambig50.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.50]) -
+  ambig50_corr.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.50]) -
     mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0 & sub.med$prob==0.5])
-  ambig74.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.75]) -
+  ambig74_corr.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0.75]) -
     mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0 & sub.med$prob==0.5])
-  ambig100.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==1]) -
+  ambig100_corr.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==1]) -
     mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0 & sub.med$prob==0.5])
   
   # choice by outcome level
@@ -572,21 +592,25 @@ for (id in ids) {
 
   # model-free attitude
   risk.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0])
+  ambig.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig!=0])
   ambig_corr.mon[idx] = mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig!=0])-
     mean(sub.mon$choice[sub.mon$val!=5 & sub.mon$ambig==0 & sub.mon$prob==0.5])
   
   risk.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0])
+  ambig.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig!=0])
   ambig_corr.med[idx] = mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig!=0])-
     mean(sub.med$choice[sub.med$val!="Slight" & sub.med$ambig==0 & sub.med$prob==0.5])
   
 }  
 
 data.attitude <- data.frame(mTurkCode = ids,
-                            risk.mon, ambig_corr.mon, risk.med, ambig_corr.med,
+                            risk.mon, ambig.mon, ambig_corr.mon, risk.med, ambig.med, ambig_corr.med,
                             risk25.mon, risk50.mon, risk75.mon,
                             ambig24.mon, ambig50.mon, ambig74.mon, ambig100.mon,
+                            ambig24_corr.mon, ambig50_corr.mon, ambig74_corr.mon, ambig100_corr.mon,
                             risk25.med, risk50.med, risk75.med,
                             ambig24.med, ambig50.med, ambig74.med, ambig100.med,
+                            ambig24_corr.med, ambig50_corr.med, ambig74_corr.med, ambig100_corr.med,
                             level1.risk.mon, level2.risk.mon, level3.risk.mon, level4.risk.mon,
                             level1.ambig.mon, level2.ambig.mon, level3.ambig.mon, level4.ambig.mon,
                             level1.risk.med, level2.risk.med, level3.risk.med, level4.risk.med,
@@ -597,7 +621,7 @@ data.attitude <- data.frame(mTurkCode = ids,
 
 save model free attitude
 ```{r}
-setwd("/Users/jiaruonan/Desktop/mdm_covid19/mdm_covid19_data")
+setwd("E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data")
 save(data.attitude, file="data_all_444sub_attitude.Rda")
 ```
 
@@ -756,6 +780,55 @@ write.csv(data.choice.mon,"data_choice_mon_444sub.csv", row.names = FALSE)
 write.csv(data.choice.med,"data_choice_med_444sub.csv", row.names = FALSE)
 ```
 
+# Model-free attitude
+```{r}
+setwd("E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data")
+load("data_all_444sub_attitude.Rda")
+
+View(data.attitude)
+```
+
+## correlation between risk and ambiguity choices
+```{r}
+ggplot(data.attitude[data.attitude$error.mon<0.5,], aes(x=risk.mon, y=ambig.mon)) +
+  geom_point() +
+  geom_smooth(method="lm")
+
+cor.test(data.attitude[data.attitude$error.mon<0.5,]$risk.mon,
+         data.attitude[data.attitude$error.mon<0.5,]$ambig.mon)
+```
+
+```{r}
+ggplot(data.attitude[data.attitude$error.mon<0.5,], aes(x=risk.mon, y=ambig_corr.mon)) +
+  geom_point() +
+  geom_smooth(method="lm")
+
+cor.test(data.attitude[data.attitude$error.mon<0.5,]$risk.mon,
+         data.attitude[data.attitude$error.mon<0.5,]$ambig_corr.mon)
+
+nrow(data.attitude[data.attitude$error.mon<0.5,])
+```
+
+```{r}
+ggplot(data.attitude[data.attitude$error.med<0.5,], aes(x=risk.med, y=ambig.med)) +
+  geom_point() +
+  geom_smooth(method="lm")
+
+cor.test(data.attitude[data.attitude$error.med<0.5,]$risk.med,
+         data.attitude[data.attitude$error.med<0.5,]$ambig.med)
+```
+
+```{r}
+ggplot(data.attitude[data.attitude$error.med<0.5,], aes(x=risk.med, y=ambig_corr.med)) +
+  geom_point() +
+  geom_smooth(method="lm")
+
+cor.test(data.attitude[data.attitude$error.med<0.5,]$risk.med,
+         data.attitude[data.attitude$error.med<0.5,]$ambig_corr.med)
+
+nrow(data.attitude[data.attitude$error.med<0.5,])
+```
+
 # Bayesian fitting
 Try model fitting by bayesian
 ```{r}
@@ -772,8 +845,8 @@ library(rethinking)
 
 ### MDM covid19 data
 ```{r}
-setwd("/Users/jiaruonan/Desktop/mdm_covid19/mdm_covid19_data")
-path = "/Users/jiaruonan/Desktop/mdm_covid19/mdm_covid19_data"
+setwd("E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data")
+path ="E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data"
 load("data_choice_mon_444sub.Rda")
 # load("data_choice_med_444sub.Rda")
 ```
@@ -781,13 +854,14 @@ load("data_choice_mon_444sub.Rda")
 survey data
 ```{r}
 # setwd("E:/Ruonan/Projects in the lab/mdm_covid19/batch_data")
-setwd("/Users/jiaruonan/Desktop/mdm_covid19/mdm_covid19_data")
+setwd("E:/Ruonan/Projects in the lab/mdm_covid19/behavior/mdm_covid19_data")
 load("data_all_444sub_rename.Rda")
 load("data_all_444sub_attitude.Rda")
 
 # combine data
 data.all <- merge(data.all, data.attitude, by = "mTurkCode")
 data.all$age <- as.numeric(as.character(data.all$age)) + 17 # correct coding
+
 ```
 
 exclude subjects
